# fastapi_zero

./: .gitignore  DOCUMENTACAO_COMPLETA_PROJETO.txt  FRONTEND_SUMMARY.md  README.md  cors_setup.md  exemplo_settings.py  package-lock.json  pyproject.toml
fastapi_zero/: app.py  database.py  models.py  schemas.py  security.py  settings.py
fastapi_zero/routers/: auth.py  todos.py  users.py
frontend/: README.md  package-lock.json  package.json  start.sh
frontend/public/: index.html
frontend/src/: App.js  index.css
frontend/src/components/: Navbar.js
frontend/src/contexts/: AuthContext.js
frontend/src/pages/: Dashboard.js  Login.js  Register.js
frontend/src/services/: api.js
migrations/: env.py
migrations/versions/: 037191f83212_add_updated_at_in_models_user.py  2cac4be6e22c_create_todos_tables.py  3a5ba60a4dd0_add_updated_at_to_users_table.py  96b84e24bb72_adicionando_todos_a_tabela_de_users.py  a757bd9be833_fix_updated_at_default_value.py  bb672486be19_create_users_table.py  ca0de850e0b7_create_users_table.py  cdd0a79e6a3c_add_updated_at_in_models_user_and_.py  fcc681fee96d_adicionando_created_at_e_pdated_at_a_.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
